--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
     },
     "require": {
         "php": "^8.2",
-        "guzzlehttp/guzzle": "^7.8"
+        "ext-intl": "*",
+        "akaunting/laravel-money": "^5.1",
+        "guzzlehttp/guzzle": "^7.8",
+        "hennest/laravel-math": "dev-main"
     },
     "require-dev": {
         "laravel/pint": "^1.13",
@@ -60,5 +63,11 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
-    }
+    },
+    "repositories": [
+        {
+            "url": "https://github.com/Hennest/laravel-math",
+            "type": "git"
+        }
+    ]
 }
