--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "ext-intl": "*",
         "akaunting/laravel-money": "^2.1",
         "guzzlehttp/guzzle": "^7.8",
-        "hennest/laravel-math": "dev-main"
+        "hennest/laravel-math": "0.0.0"
     },
     "require-dev": {
         "laravel/pint": "^1.13",
@@ -60,11 +60,5 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
-    },
-    "repositories": [
-        {
-            "url": "https://github.com/Hennest/laravel-math",
-            "type": "git"
-        }
-    ]
+    }
 }
